# big-float

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Makefile
benchmarks/: CMakeLists.txt
big_float/: CMakeLists.txt
big_float/include/: big_float.hpp  error.hpp  exponent.hpp  sign.hpp  type.hpp
big_float/source/: add.cpp  compare.cpp  comparisons.cpp  constructors.cpp  error.cpp  getters.cpp  getters.hpp  mul.cpp  neg.cpp  sign.cpp  sub.cpp
tests/: CMakeLists.txt
tests/tests/: comparison.cpp  test_add.cpp  test_compare.cpp  test_mul.cpp  test_sub.cpp
